--- a/src/main/resources/org/example/proyecto_grupo7/hello-view.fxml
+++ b/src/main/resources/org/example/proyecto_grupo7/hello-view.fxml
@@ -1,16 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.example.proyecto_grupo7.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.proyecto_grupo7.LoginController">
+  <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="162.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="238.0" minWidth="10.0" prefWidth="191.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="230.0" minWidth="10.0" prefWidth="215.0" />
+  </columnConstraints>
+  <rowConstraints>
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
+   <children>
+      <PasswordField fx:id="cajaPassword" prefHeight="18.0" prefWidth="159.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <padding>
+            <Insets left="30.0" right="30.0" />
+         </padding>
+         <GridPane.margin>
+            <Insets left="10.0" right="30.0" />
+         </GridPane.margin>
+      </PasswordField>
+      <TextField fx:id="barraLogin" GridPane.columnIndex="1" GridPane.rowIndex="1">
+         <GridPane.margin>
+            <Insets left="10.0" right="30.0" />
+         </GridPane.margin>
+         <padding>
+            <Insets left="10.0" right="30.0" />
+         </padding>
+      </TextField>
+      <Label fx:id="cajaLogin" alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="176.0" text="LOGIN:" textAlignment="JUSTIFY" GridPane.rowIndex="1">
+         <font>
+            <Font name="Noto Sans Glagolitic Regular" size="13.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER_RIGHT" layoutX="10.0" layoutY="150.0" prefHeight="21.0" prefWidth="187.0" text="PASSWORD:" textAlignment="JUSTIFY" GridPane.rowIndex="2">
+         <font>
+            <Font name="Noto Sans Glagolitic Regular" size="13.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" prefHeight="25.0" prefWidth="273.0" text="Bienvenidos !!!">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Button fx:id="botonEntrar" alignment="CENTER" mnemonicParsing="false" onAction="#onClick" prefHeight="26.0" prefWidth="114.0" text="Entrar" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <GridPane.margin>
+            <Insets left="40.0" right="30.0" />
+         </GridPane.margin>
+      </Button>
+      <Label fx:id="errorCuentaErronea" prefHeight="18.0" prefWidth="291.0" textFill="RED" GridPane.columnIndex="2" />
+   </children>
+</GridPane>
