--- a/src/main/resources/org/example/proyecto_grupo7/hello-view.fxml
+++ b/src/main/resources/org/example/proyecto_grupo7/hello-view.fxml
@@ -55,6 +55,6 @@
          </GridPane.margin>
       </Button>
       <Label fx:id="errorCuentaErronea" prefHeight="18.0" prefWidth="291.0" textFill="RED" GridPane.columnIndex="2" />
-      <Button fx:id="noCuenta" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="24.0" prefWidth="127.0" text="No tengo cuenta" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <Button fx:id="noCuenta" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#noCuenta" prefHeight="24.0" prefWidth="127.0" text="No tengo cuenta" GridPane.columnIndex="2" GridPane.rowIndex="3" />
    </children>
 </GridPane>
