--- a/src/main/resources/org/example/proyecto_grupo7/registro-view.fxml
+++ b/src/main/resources/org/example/proyecto_grupo7/registro-view.fxml
@@ -100,13 +100,26 @@
                   <Insets right="10.0" />
                </padding>
             </PasswordField>
-            <Button mnemonicParsing="false" onAction="#onClick" prefHeight="26.0" prefWidth="310.0" text="Entrar" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#onClick" prefHeight="18.0" prefWidth="204.0" text="Entrar" GridPane.rowIndex="6">
                <GridPane.margin>
-                  <Insets bottom="20.0" left="100.0" right="100.0" top="20.0" />
+                  <Insets bottom="20.0" left="180.0" top="20.0" />
                </GridPane.margin>
                <padding>
                   <Insets left="10.0" right="10.0" />
                </padding>
+            </Button>
+            <Label prefHeight="18.0" prefWidth="36.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <GridPane.margin>
+                  <Insets left="100.0" />
+               </GridPane.margin>
+            </Label>
+            <Button fx:id="botonSalir" mnemonicParsing="false" onAction="#botonSalir" prefHeight="10.0" prefWidth="100.0" text="Salir" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+               <GridPane.margin>
+                  <Insets left="60.0" right="10.0" />
+               </GridPane.margin>
             </Button>
          </children>
       </GridPane>
