--- a/src/main/resources/org/example/proyecto_grupo7/alojamiento-view.fxml
+++ b/src/main/resources/org/example/proyecto_grupo7/alojamiento-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.proyecto_grupo7.AlojamientoController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.proyecto_grupo7.AlojamientoController">
    <children>
       <GridPane prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
@@ -19,9 +19,9 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label alignment="CENTER" prefHeight="24.0" prefWidth="212.0" text="¿Donde quiere modificar?" GridPane.columnIndex="1">
+            <Label alignment="CENTER" prefHeight="21.0" prefWidth="222.0" text="¿Donde quiere modificar?" GridPane.columnIndex="1">
                <font>
-                  <Font size="16.0" />
+                  <Font name="System Bold" size="13.0" />
                </font>
             </Label>
             <Button fx:id="botonHotel" mnemonicParsing="false" onAction="#botonHotel" prefHeight="26.0" prefWidth="122.0" text="Hoteles" GridPane.rowIndex="1">
@@ -33,7 +33,7 @@
                <GridPane.margin>
                   <Insets left="30.0" right="30.0" />
                </GridPane.margin></Button>
-            <Button fx:id="botonAlojamieto" mnemonicParsing="false" onAction="#botonAloj" prefHeight="26.0" prefWidth="149.0" text="Alojamientos" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button fx:id="botonAlojamieto" mnemonicParsing="false" onAction="#botonAlojamieto" prefHeight="26.0" prefWidth="149.0" text="Alojamientos" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="40.0" right="40.0" />
                </GridPane.margin>
