--- a/src/main/resources/org/example/proyecto_grupo7/reservasHoteles-view.fxml
+++ b/src/main/resources/org/example/proyecto_grupo7/reservasHoteles-view.fxml
@@ -19,7 +19,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="206.0" text="Hacer reserva" GridPane.rowIndex="1">
+            <Button fx:id="hacerReserva" alignment="CENTER" mnemonicParsing="false" onAction="#hacerReserva" prefHeight="26.0" prefWidth="206.0" text="Hacer reserva" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets left="30.0" right="30.0" />
                </GridPane.margin>
