--- a/src/main/resources/org/example/proyecto_grupo7/alojamiento-view.fxml
+++ b/src/main/resources/org/example/proyecto_grupo7/alojamiento-view.fxml
@@ -38,6 +38,11 @@
                   <Insets left="40.0" right="40.0" />
                </GridPane.margin>
             </Button>
+            <Button fx:id="noCuenta" mnemonicParsing="false" onAction="#noCuenta" text="Registrar cliente" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="30.0" right="20.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
    </children>
