--- a/src/main/resources/org/example/proyecto_grupo7/registro-view.fxml
+++ b/src/main/resources/org/example/proyecto_grupo7/registro-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.proyecto_grupo7.RegistroController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.proyecto_grupo7.RegistroController">
    <children>
       <GridPane prefHeight="400.0" prefWidth="600.0">
         <columnConstraints>
@@ -113,7 +113,7 @@
                   <Insets left="100.0" />
                </GridPane.margin>
             </Label>
-            <Button fx:id="botonSalir" mnemonicParsing="false" onAction="#botonSalir" prefHeight="10.0" prefWidth="100.0" text="Salir" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <Button fx:id="btAtras" mnemonicParsing="false" onAction="#botonAtras" prefHeight="10.0" prefWidth="100.0" text="Volver Atras" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <padding>
                   <Insets left="10.0" right="10.0" />
                </padding>
